Correción mailto en enlace

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 Puedes contactarme a través de:
             </p>
             <div class="flex flex-col items-center justify-center gap-3 md:flex-row">
-                <a href="ssolezzi@gmail.com"
+                <a href="mailto:ssolezzi@gmail.com"
                     class="bg-sky-500 hover:bg-sky-600 text-white font-bold py-2 px-6 rounded-full transition-colors">Email</a>
                 <a href="https://www.linkedin.com/in/tu-perfil/" target="_blank"
                     class="bg-sky-500 hover:bg-sky-600 text-white font-bold py-2 px-6 rounded-full transition-colors">LinkedIn</a>
