Cambio en ruta de perfil de linkedin

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="flex flex-col items-center justify-center gap-3 md:flex-row">
                 <a href="mailto:ssolezzi@gmail.com"
                     class="bg-sky-500 hover:bg-sky-600 text-white font-bold py-2 px-6 rounded-full transition-colors">Email</a>
-                <a href="https://www.linkedin.com/in/tu-perfil/" target="_blank"
+                <a href="https://www.linkedin.com/in/sebastian-solezzi/" target="_blank"
                     class="bg-sky-500 hover:bg-sky-600 text-white font-bold py-2 px-6 rounded-full transition-colors">LinkedIn</a>
                 <a href="https://github.com/sebsolezzi88" target="_blank"
                     class="bg-gray-700 hover:bg-gray-600 text-white font-bold py-2 px-6 rounded-full transition-colors">GitHub</a>
